# purevideo

./: pubspec.yaml
.github/workflows/: build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/core/services/: resolve_url_service.dart  webview_service.dart
lib/data/repositories/: video_source_repository.dart
lib/di/: injection_container.dart
resolver/LibResolveURL/: .gitignore  README.md  pyproject.toml
resolver/LibResolveURL/libresolveurl/: __init__.py
resolver/LibResolveURL/libresolveurl/_kodi_stubs/: __init__.py  kodi_six.py  xbmc.py  xbmcaddon.py  xbmcgui.py  xbmcplugin.py  xbmcvfs.py
resolver/LibResolveURL/script.module.resolveurl/: addon.xml  changelog.txt
resolver/LibResolveURL/script.module.resolveurl/lib/resolveurl/: resolver.py
resolver/LibResolveURL/script.module.resolveurl/lib/resolveurl/lib/: helpers.py  net.py  pbkdf2.py
resolver/LibResolveURL/script.module.resolveurl/lib/resolveurl/lib/aesgcm/: aes.py  aesgcm.py  codec.py  compat.py  constanttime.py  cryptomath.py  deprecations.py  python_aes.py  python_aesgcm.py  rijndael.py  tlshashlib.py  tlshmac.py
resolver/LibResolveURL/script.module.resolveurl/lib/resolveurl/lib/websocket/: __init__.py  _abnf.py  _app.py  _cookiejar.py  _core.py  _exceptions.py  _handshake.py  _http.py  _logging.py  _socket.py  _ssl_compat.py  _url.py  _utils.py
resolver/LibResolveURL/script.module.resolveurl/lib/resolveurl/plugins/: byse.py  hdvid.py  kinoger.py  playhd.py  streamtape.py
(+18 files in other folders)
