[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "libresolveurl"
version = "0.1.0"
description = "Python library wrapper for ResolveURL (Kodi addon fork)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["six"]

[tool.setuptools.packages.find]
where = [".", "script.module.resolveurl/lib"]
include = ["libresolveurl*", "resolveurl*"]